Add plugin directory age metadata
